# spec-to-proof

./: .bazelrc  .fossa.yml  .gitignore  BUILD  CHANGELOG.md  CODEOWNERS  Makefile  PROMPT_14_15_16_17_SUMMARY.md  PROMPT_2_SUMMARY.md  PROMPT_3_SUMMARY.md  PROMPT_4_SUMMARY.md  PROMPT_6_SUMMARY.md  PROMPT_9_10_11_SUMMARY.md  README.md  WORKSPACE  demo_language_variations.py  docker-compose.yml  jest.setup.js  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci-new.yml  ci.yml
benchmarks/2025-01-15/: k6-load-test.js
charts/lean-farm/: Chart.yaml  values.yaml
charts/lean-farm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml
charts/spec-to-proof/: Chart.yaml  values.yaml
charts/spec-to-proof/templates/: _helpers.tpl  deployments.yaml  rbac.yaml  services.yaml  supporting.yaml
docs/: migration.md
docs/adr/: 001-monorepo-architecture.md
docs/compliance/: soc2-readiness-checklist.md
docs/prompts/: prompt-1-completion.md
docs/runbooks/: README.md  cost-threshold.md  coverage-drop.md  drift-backlog-overflow.md  high-error-rate.md  high-latency.md  low-success-rate.md  proof-failure-rate.md  resource-exhaustion.md  security-scan-failures.md  service-unavailable.md
e2e/gh-fixtures/: README.md
e2e/gh-fixtures/.github/workflows/: test-badge-flow.yml
ingest/: BUILD
ingest/grafana/dashboards/: connector-metrics.json
ingest/src/: backoff.rs  lib.rs  proto.rs  rate_limiter.rs  secrets.rs
ingest/src/connectors/: confluence.rs  gdocs.rs  jira.rs  mod.rs
ingest/tests/: e2e_integration_test.rs
lean-farm/: Cargo.toml  Dockerfile  README.md
lean-farm/scripts/: security-benchmark.sh
lean-farm/src/: job_runner.rs  lib.rs  main.rs  security.rs
lean-farm/tests/: integration_test.rs
monitoring/blackbox/: blackbox.yml
monitoring/grafana/dashboards/: spec-to-proof-overview.json
monitoring/prometheus/: alerting_rules.yml  prometheus.yml
nlp/: BUILD  Language_Variation_Analysis.md
nlp/prompts/: invariant_extraction.md
nlp/proto/: nlp.proto
nlp/src/: cache.rs  claude_client.rs  extractor.rs  lib.rs  pii_redactor.rs  post_processor.rs  prompts.rs
nlp/tests/: invariant_extraction_test.rs  language_variation_test.rs
platform/: BUILD
platform/gh-app/: BUILD  Cargo.toml
platform/gh-app/proto/: gh_app.proto
platform/gh-app/src/: auth.rs  badge.rs  cloudwatch_events.rs  config.rs  cost_governance.rs  error.rs  github.rs  lib.rs  main.rs  proto.rs  server.rs  sigstore.rs  webhook.rs  webhook_handlers.rs  workflows.rs
platform/ui/: README.md  jest.config.js  jest.setup.js  next.config.js  tailwind.config.js  tsconfig.jest.json  tsconfig.json
platform/ui/src/app/: globals.css  layout.tsx  page.tsx
platform/ui/src/components/invariants/: EditInvariantModal.tsx  InvariantCard.tsx  InvariantList.tsx  RenameInvariantModal.tsx  SplitInvariantModal.tsx
platform/ui/src/components/invariants/__tests__/: InvariantCard.test.tsx
platform/ui/src/components/layout/: Header.tsx
platform/ui/src/components/providers/: TRPCProvider.tsx  ThemeProvider.tsx
platform/ui/src/components/ui/: Badge.tsx  Button.tsx  ConfirmDialog.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  Select.tsx  TagInput.tsx  Textarea.tsx  Toast.tsx
platform/ui/src/lib/: coverage.ts  openapi.ts  trpc.ts  utils.ts
platform/ui/src/lib/__tests__/: coverage.test.ts
platform/ui/src/types/: jest.d.ts  spec-to-proof.ts
platform/ui/src/types/__tests__/: spec-to-proof.test.ts
proof/: BUILD  README.md
proof/lean/: trivial_example.lean
proof/proto/: proof.proto
proof/src/: claude_client.rs  compiler.rs  lib.rs  prompts.rs  proto.rs  s3_storage.rs
proof/tests/: lean_compiler_test.rs
proto/: Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs  spec_to_proof.proto
proto/fuzz/: Cargo.toml
proto/fuzz/fuzz_targets/: round_trip.rs
proto/schemas/: spec-to-proof.json
proto/src/: lib.rs
scripts/: ci-lint.bat  ci-lint.sh  generate-sbom.sh  kind-cluster.sh  performance-profile.sh  run-benchmarks.sh  smoke-qa.sh  upgrade-playbook.sh
terraform/: main.tf
