[package]
name = "spec-to-proof-proto"
version = "0.1.0"
edition = "2021"
description = "Protobuf definitions for Spec-to-Proof platform"
license = "MIT"
repository = "https://github.com/fraware/spec-to-proof"

[dependencies]
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
arbitrary = { version = "1.0", features = ["derive"] } 