[package]
name = "gh-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
aws-sdk-secretsmanager = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-kms = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
temporal-sdk = "1.0"
temporal-sdk-core = "1.0"
temporal-client = "1.0"
async-trait = "0.1"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
metrics = "0.21"
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.19"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5" 